# blindsight

./: .gitignore  .mcp.json  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: appendix.md  index.md  live-integration-framework.md  project-boundary.md  replay-scenarios.md  roadmap.md  status.md
docs/adr/: ADR-0001-read-only-query-in-place.md  ADR-0002-replay-datasets-for-evaluation.md  ADR-0003-duckdb-as-case-store.md  ADR-0004-domain-based-architecture.md  ADR-0004-plane-based-architecture.md  ADR-0005-gap-aware-hypothesis-scoring.md  ADR-0006-mcp-tool-contracts.md  ADR-0007-investigation-orchestration-server.md  ADR-0008-investigation-followup-tools.md  ADR-0009-categorical-scoring.md  ADR-0010-app-domain-server.md  ADR-0011-incident-report-generation.md
docs/spec/: canonical-output-spec.md  case-mcp-tool-contract.md  case-store-schema.md  identity-domain-contract.json  identity_plane_contract.json  integration-interface.md  investigation-mcp-tool-contract.md  normalized-output-spec.md  ontology.yaml  replay-dataset-contract.md  source-adapter-interface.md
docs/spec/implementation/: code-organization.md  fastmcp-pydantic-patterns.md
scripts/: _investigation.py  demo.py  demo_agent.py  demo_analysis.py  demo_local.py
src/blindsight/: __init__.py  cli.py  config.py  installer.py
src/blindsight/scenarios/account_substitution_baseline/: expected_tool_output.json
src/blindsight/scenarios/account_substitution_degraded_no_sleeper_creation/: expected_tool_output.json
src/blindsight/scenarios/credential_change_baseline/: expected_tool_output.json  manifest.yaml
src/blindsight/scenarios/credential_change_degraded_missing_fields/: expected_tool_output.json
src/blindsight/scenarios/credential_change_degraded_missing_mfa/: expected_tool_output.json  manifest.yaml
src/blindsight/scenarios/password_takeover_baseline/: expected_tool_output.json
src/blindsight/servers/: app_mcp.py  case_mcp.py  identity_mcp.py  investigation_mcp.py
src/blindsight/services/app/: factory.py  replay_integration.py
src/blindsight/types/: envelope.py  integration.py  report.py
src/blindsight/utils/: coverage.py  logging.py  mcp_envelope.py  tlp.py  ulid.py  validator.py
src/servers/: case_mcp.py  identity_mcp.py  investigation_mcp.py
src/services/app/: factory.py
src/services/case/: ingest.py  json_helpers.py  pivot.py  query.py  store.py
src/services/identity/: coverage.py  factory.py  replay_integration.py  validator.py
src/services/investigation/: aggregation.py  focal.py  mcp_client.py  pipeline.py  scoring.py
src/types/: core.py  envelope.py  errors.py  result.py
src/utils/: coverage.py  mcp_envelope.py  serialization.py  time.py  tlp.py  validator.py
tests/: conftest.py
tests/fixtures/replay/: generate_account_substitution.py  generate_credential_change.py  generate_password_takeover.py  generate_superadmin_escalation.py
tests/integration/: test_app_mcp.py  test_case_correlation.py  test_case_pivot_mcp.py  test_contract_compliance.py  test_determinism.py  test_investigation_mcp.py  test_investigation_pipeline.py  test_replay_scenarios.py  test_report_generation.py
tests/unit/: test_installer.py  test_subprocess_invocation.py
(+112 files in other folders)
