[project]
name = "blindsight"
version = "0.0.1"
description = "Agentic incident investigation framework that separates what the evidence suggests from what the data can verify."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Will Stull", email = "willstull17@gmail.com" },
]
keywords = ["mcp", "incident-response", "security", "investigation", "agentic", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "result>=0.17.0,<0.18.0",
    "python-ulid>=2.7.0,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.0,<25.0",
    "duckdb>=1.4.4,<2.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "pydantic-ai-slim[anthropic]>=0.2.0,<0.3.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
blindsight = "blindsight.cli:main"
blindsight-investigation-mcp = "blindsight.servers.investigation_mcp:main"
blindsight-identity-mcp = "blindsight.servers.identity_mcp:main"
blindsight-case-mcp = "blindsight.servers.case_mcp:main"
blindsight-app-mcp = "blindsight.servers.app_mcp:main"

[project.urls]
Homepage = "https://github.com/willstull/blindsight"
Repository = "https://github.com/willstull/blindsight"
Issues = "https://github.com/willstull/blindsight/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blindsight"]

[tool.hatch.build.targets.wheel.force-include]
"src/blindsight/scenarios" = "blindsight/scenarios"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "external_api: tests that call external APIs (exclude in CI)"
]
